--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  margin: 5%;
   background: rgb(255, 128, 78);
   color: whitesmoke;
   font-family: Arial, Helvetica, sans-serif;
@@ -6,4 +7,23 @@ body {
 
 h1 {
   font-size: 8rem;
+}
+
+h2 {
+  text-align: right;
+  font-size: 5rem;
+  text-transform: uppercase;
+}
+
+h2:hover {
+  text-decoration: underline;
+}
+
+/* BUTTON */
+button {
+  background-color: whitesmoke;
+  padding: 2%;
+  color: rgb(255, 128, 78);
+  border: none;
+  border-radius: 30px;
 }
